--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,9 +9,9 @@ ganesha_export: [
 #    access_type: "rw",
 #    square: "no_root_seuash",
 #    disable_acl: "true",
-#    transports: "'udp', 'tcp'",
+#    transports: "udp, tcp",
 #    sectype: "sys",
-#    protocols: "'3', '4'",
+#    protocols: "3, 4",
 #    fsal: {
 #      name: "vfs"
 #    },
@@ -23,9 +23,9 @@ ganesha_export: [
 #    access_type: "rw",
 #    square: "no_root_seuash",
 #    disable_acl: "true",
-#    transports: "'udp', 'tcp'",
+#    transports: "udp, tcp",
 #    sectype: "sys",
-#    protocols: "'3', '4'",
+#    protocols: "3, 4",
 #    fsal: {
 #      name: "gluster",
 #      hostname: "localhost",
