--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - sudo apt-get -y install ansible
 
 install:
-  - git clone https://github.com/pantarei/ansible-role-ganesha.git ../hswong3i.ganesha
+  - git clone https://github.com/pantarei/ansible-role-ganesha.git ../ansible-role-ganesha
 
 before_script:
   - sudo mkdir -p /srv/export
