--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,5 +4,5 @@
 - hosts: localhost
   remote_user: root
   roles:
-    - hswong3i.ganesha
+    - ansible-role-ganesha
     - ansible-role-ganesha-export
