--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ ganesha_export: [
 #    path: "/srv/export/home",
 #    pseudo: "/srv/export/home",
 #    access_type: "rw",
-#    square: "no_root_seuash",
+#    squash: "no_root_squash",
 #    disable_acl: "true",
 #    transports: "udp, tcp",
 #    sectype: "sys",
@@ -21,7 +21,7 @@ ganesha_export: [
 #    path: "/srv/export/home",
 #    pseudo: "/srv/export/home",
 #    access_type: "rw",
-#    square: "no_root_seuash",
+#    squash: "no_root_squash",
 #    disable_acl: "true",
 #    transports: "udp, tcp",
 #    sectype: "sys",
