--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,6 @@
     group: "{{ item.group }}"
     mode: "{{ item.mode }}"
   with_items:
-    - { src: "etc/ganesha/ganesha.conf.j2", dest: "/etc/ganesha/ganesha.conf", owner: "root", group: "root", mode: "0644" }
+    - { src: "etc/ganesha/ganesha.conf.d/export.conf.j2", dest: "/etc/ganesha/ganesha.conf.d/export.conf", owner: "root", group: "root", mode: "0644" }
   notify: restart ganesha
   tags: hswong3i.ganesha_export
